<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp"
    tools:context=".StorageActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firebase_cloud_storage"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:layout_marginVertical="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_image_name"
        android:backgroundTint="@color/teal_200"
        android:id="@+id/editText"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/getImage"
        android:backgroundTint="@color/teal_200"
        android:text="@string/get_image"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/uploadImage"
        android:backgroundTint="@color/teal_200"
        android:text="@string/upload_image"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"/>


</LinearLayout>